5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1850_1274.log
== TEST (2019-06-24 00:12:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
for i in range(n):
	for j in range(n):
		if(i = j):
			mz[i,j] = i
print(mz)
		
-- ERROR:
File "XXXX", line 7
    if(i = j):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:12:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
for i in range(n):
	for j in range(n):
		if(i == j):
			mz[i,j] = i
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:13:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
for i in range(n):
	for j in range(n):
		if(i == j):
			mz[i,j] = i + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:19:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b):
			mz[i,j] = i + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:19:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b):
			mz[i,j] = i + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:20:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,j] = b
		
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:20:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,j] = 1
		
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:20:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,j] = 1
		
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:24:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,j] = b + 1
		b = b + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:24:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,j] = b + 1
		b = b + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:24:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,j] = b + 1
		b = b + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:24:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,j] = b + 1
			b = b + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:24:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,j] = b + 1
	b = b + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:25:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,j] = i + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:26:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,:] = i + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:26:11) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[:,j] = i + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:26:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,j] = 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:27:12) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 0
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i+1,j+1] = 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:27:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 1
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			mz[i,j] = 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:29:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 1
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			if(i>=j):
				mz[i,j] = 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:30:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 1
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			if(i != b-1 and j!= b-1):
				mz[i,j] = 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:33:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 1
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			if(i != b-1 and j!= b-1):
				mz[i,j] = 1
		else:
			b = b + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:33:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 1
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			if(i != b-1 and j!= b-1):
				mz[i,j] = 1
			else:
				b = b + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:34:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 1
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			if(i != b-1 and j!= b-1):
				mz[i,j] = b + 1
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 00:36:39) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o numero: "))
mz = zeros((n,n),dtype = int)
b = 1
for i in range(n):
	for j in range(n):
		if(i == b or j == b):
			if(i != b-1 and j!= b-1):
				mz[i,j] = b
print(mz)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:49:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
b = 0
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(N):
		if(i == b or j == b):
			mz[i,j] = b
			b = b + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:49:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
b = 0
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(N):
		if(i == b or j == b):
			mz[i,j] = b
	b = b + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:49:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
b = 0
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(N):
		if(i == b or j == b):
			mz[i,j] = b
		b = b + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:09:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
b = 0
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(N):
		mz[j+i,i+j] = i
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:09:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
b = 0
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N)
		mz[j+i,i+j] = i
print(mz)
-- ERROR:
File "XXXX", line 7
    for j in range(i,N)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:09:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
b = 0
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[j+i,i+j] = i
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:13:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
b = 0
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(N):
		mz[j+i,i+j] = i
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:13:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N+1)
	for j in range(N+1)
		mz[j+i,i+j] = i
print(mz)
-- ERROR:
File "XXXX", line 5
    for i in range(N+1)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:13:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N+1):
	for j in range(N+1):
		mz[j+i,i+j] = i
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:15:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[j+i,i+j] = i
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:16:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[i,j] = i
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:16:56) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[i,j] = i
		mz[j,i] = j
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:17:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[i,j] = i
		mz[j,i] = i
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:17:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[i,j] = i + 1
		mz[j,i] = i + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:17:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[i,j] = i + 1
		mz[j,i] = i + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 19:17:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[i,j] = i + 1
		mz[j,i] = i + 1
print(mz)
-- EXECUTION TIME:
1.18125
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:19:29) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[i,j] = i + 1
		mz[j,i] = i + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:19:34) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(N):
		mz[i,j] = i + 1
		mz[j,i] = i + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:19:39) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(N):
		mz[i,j] = i + 1
		mz[j,i] = i + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:19:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(N,i):
		mz[i,j] = i + 1
		mz[j,i] = i + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:19:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(N,i):
		mz[i,j] = i + 1
		mz[j,i] = i + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:20:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[i,j] = i + 1
		mz[j,i] = i + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:47:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[i,j] = i + 1
		mz[j,i] = i + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:47:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[i,j] = i + 1
		mz[j,i] = j + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:47:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
N = int(input('digite o numero: '))
mz = zeros((N,N),dtype = int)
for i in range(N):
	for j in range(i,N):
		mz[i,j] = i + 1
		mz[j,i] = i + 1
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
